# beam_tensorflow_pipeline

./: .gitignore  pyproject.toml
scripts/: preprocess.py  train.py
