[tool.poetry]
name = "beam-tensorflow-pipeline"
version = "0.1.0"
description = "Beam pipeline template for tensorflow"
authors = ["ivanovsdesign <78684921+ivanovsdesign@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "^2.15"
tensorflow-datasets = "^4.9.4"
tensorflow-transform = "^1.15.0"
apache-beam = "^2.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
